src/z80asm/z80asm2/t/20-preproc/expected/undef_01.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/undef_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/undef_01.asm...
t/20-preproc/input/undef_01.asm:1:6: error: Expected identifier after UNDEF
    undef ; no name
         ^
t/20-preproc/input/undef_01.asm:2:13: error: Unexpected token after UNDEF: world
    undef hello world ; extra tokens
                ^
# file: t/20-preproc/input/undef_01.asm
EndOfLine	"\n"	3:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
